<resources>
    <string name="app_name">Vacation</string>
    <string name="DataInicio">DataInicio</string>
    <string name="btnDataInicio">DataInicio</string>
    <string name="btnDataFinal">DataFinal</string>
    <string name="DataFinal">DataFinal</string>
    <string name="btnOk">Ok</string>
    <string name="btnLocalOk">Ok</string>
    <string name="Data">Data</string>
    <string name="Local">Local</string>
    <string name="selecione_mes">Selecione o mês</string>
    <string name="txtSelecioneMês">Selecione o mês das férias</string>
    <string name="btnBuscaLocais">Buscar locais</string>
    <string name="detalhes_txt">Detalhes</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Buscar">Buscar</string>
    <string name="descricao">Descrição</string>
    <string name="estacao">Estação</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="Excluir">Excluir</string>
    <string name="Listar">Listar</string>
    <string name="salvar">Salvar</string>
</resources>
