<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Data"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DataInicio" />
    <Button
        android:layout_gravity="center"
        android:id="@+id/btnDataInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="showCalendar"
        android:text="@string/btnDataInicio" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/DataFinal" />
    <Button
        android:layout_gravity="center"
        android:id="@+id/btnDataFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="showCalendar"
        android:text="@string/btnDataFinal" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/Ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:onClick="toLocal"
        android:text="@string/btnLocalOk" />

</LinearLayout>